Observer & UI Amelioration & Detail